--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -1,14 +1,16 @@
-name: CI/CD
+name: Continuous Integration and Deployment
 
 on:
   push:
     branches:
-      - 'IAT-4'
+      - IAT-4
+  pull_request:
+    branches:
+      - IAT-4
 
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,26 +21,81 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Verify Java version
+        run: java -version
+
+  test:
+    runs-on: windows-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Verify Java version
+        run: java -version
+
+      - name: Run Tests
+        run: mvn clean test -DskipTests
+
+  allure-report:
+    runs-on: windows-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Verify Java version
+        run: java -version
+
+      - name: Generate Allure Report
+        run: mvn allure:report
+
+      - name: Verify Environment Properties File
+        run: ls -l allure-results/environment.properties
+
       - name: Install Allure CLI
         run: npm install -g allure-commandline
 
-      - name: Run Tests and Generate Allure Report
-        run: |
-          mvn clean test || true
-          mvn allure:report || true
-        continue-on-error: true
-
-      - name: Publish Allure Report to GitHub Pages
-        if: always()
-        run: |
-          allure generate allure-results --clean -o allure-report-html
-          touch allure-report-html/.nojekyll
-        continue-on-error: true
-
-      - name: Deploy to GitHub Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Allure Results
+        uses: actions/upload-artifact@v2
         with:
-          github_token: ${{ secrets.MY_GITHUB_TOKEN }}
-          publish_dir: ./allure-report-html
-          publish_branch: gh-pages 
+          name: allure-results
+          path: allure-results
+
+  publish-allure-report:
+    runs-on: windows-latest
+    needs: allure-report
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install Allure CLI
+        run: npm install -g allure-commandline
+      - name: Convert Allure Report to HTML
+        run: |
+          allure generate allure-results --clean -o allure-report
+          ls -l allure-report  # Optional: List files in allure-report for verification
+      - name: Deploy to GitHub Pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cd allure-report
+          git init
+          git config user.email "kashyap.dave@krishtechnolabs.com"
+          git config user.name "KashyapDave95"
+          git checkout gh-pages 
+          git add .
+          git commit -m "Update Allure report"
+          git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/SohamQAKrish/Bateel_Automation.git
+          git push -f -u origin gh-pages  # Force push to gh-pages branch
