--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -94,7 +94,7 @@ jobs:
           git init
           git config user.email "kashyap.dave@krishtechnolabs.com"
           git config user.name "KashyapDave95"
-          git checkout gh-pages 
+          git checkout -b gh-pages origin/gh-pages  # Checkout the gh-pages branch
           git add .
           git commit -m "Update Allure report"
           git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/SohamQAKrish/Bateel_Automation.git
