--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -80,21 +80,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Install Allure CLI
         run: npm install -g allure-commandline
+
       - name: Convert Allure Report to HTML
         run: |
           allure generate allure-results --clean -o allure-report
           ls -l allure-report  # Optional: List files in allure-report for verification
+
       - name: Deploy to GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: |
-            cd allure-report
-            git config user.email "kashyap.dave@krishtechnolabs.com"
-            git config user.name "KashyapDave95"
-            git checkout -b gh-pages
-            git add .
-            git commit -m "Deploy Allure report to GitHub Pages"
-            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/SohamQAKrish/Bateel_Automation.git
-            git push -f -u origin gh-pages
+          cd allure-report
+          git config user.email "kashyap.dave@krishtechnolabs.com"
+          git config user.name "KashyapDave95"
+          git add .
+          git commit -m "Deploy Allure report to GitHub Pages"
+          git push origin gh-pages
