--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -1,10 +1,7 @@
-name: Continuous Integration and Deployment
+name: Deploy GitHub Pages and Allure Report
 
 on:
   push:
-    branches:
-      - IAT-4
-  pull_request:
     branches:
       - IAT-4
 
@@ -24,40 +21,8 @@ jobs:
       - name: Verify Java version
         run: java -version
 
-  test:
-    runs-on: windows-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Verify Java version
-        run: java -version
-
       - name: Run Tests
         run: mvn clean test -DskipTests
-
-  allure-report:
-    runs-on: windows-latest
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Verify Java version
-        run: java -version
 
       - name: Generate Allure Report
         run: mvn allure:report
@@ -65,18 +30,15 @@ jobs:
       - name: Verify Environment Properties File
         run: ls -l allure-results/environment.properties
 
-      - name: Install Allure CLI
-        run: npm install -g allure-commandline
-
       - name: Upload Allure Results
         uses: actions/upload-artifact@v2
         with:
           name: allure-results
           path: allure-results
 
-  publish-allure-report:
+  deploy:
     runs-on: windows-latest
-    needs: allure-report
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -84,18 +46,30 @@ jobs:
       - name: Install Allure CLI
         run: npm install -g allure-commandline
 
-      - name: Convert Allure Report to HTML
+      - name: Generate Allure Report HTML
         run: |
           allure generate allure-results --clean -o allure-report
           ls -l allure-report  # Optional: List files in allure-report for verification
 
       - name: Deploy to GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # GitHub token with repo scope
         run: |
-          cd allure-report
-          git config user.email "kashyap.dave@krishtechnolabs.com"
-          git config user.name "KashyapDave95"
+          # Clone the gh-pages branch where GitHub Pages site is hosted
+          git clone --branch gh-pages https://github.com/SohamQAKrish/Bateel_Automation.git gh-pages
+          
+          # Clean the existing contents of the gh-pages branch
+          cd gh-pages
+          git rm -rf .
+
+          # Copy the Allure report files into the gh-pages branch
+          cp -r ../allure-report/* .
+
+          # Configure Git user details
+          git config --global user.email "kashyap.dave@krishtechnolabs.com"
+          git config --global user.name "KashyapDave95"
+
+          # Add, commit, and push the changes to gh-pages branch
           git add .
-          git commit -m "Deploy Allure report to GitHub Pages"
+          git commit -m "Deploy Allure report and GitHub Pages"
           git push origin gh-pages
