--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -1,7 +1,10 @@
-name: Deploy GitHub Pages and Allure Report
+name: Continuous Integration and Deployment
 
 on:
   push:
+    branches:
+      - IAT-4
+  pull_request:
     branches:
       - IAT-4
 
@@ -12,10 +15,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '21'
+          distribution: 'adopt'
+
+      - name: Verify Java version
+        run: java -version
+
+  test:
+    runs-on: windows-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
           distribution: 'adopt'
 
       - name: Verify Java version
@@ -24,11 +43,30 @@ jobs:
       - name: Run Tests
         run: mvn clean test -DskipTests
 
+  allure-report:
+    runs-on: windows-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+          distribution: 'adopt'
+
+      - name: Verify Java version
+        run: java -version
+
       - name: Generate Allure Report
         run: mvn allure:report
 
       - name: Verify Environment Properties File
         run: ls -l allure-results/environment.properties
+
+      - name: Install Allure CLI
+        run: npm install -g allure-commandline
 
       - name: Upload Allure Results
         uses: actions/upload-artifact@v2
@@ -36,40 +74,28 @@ jobs:
           name: allure-results
           path: allure-results
 
-  deploy:
+  publish-allure-report:
     runs-on: windows-latest
-    needs: build
+    needs: allure-report
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Install Allure CLI
         run: npm install -g allure-commandline
-
-      - name: Generate Allure Report HTML
+      - name: Convert Allure Report to HTML
         run: |
           allure generate allure-results --clean -o allure-report
           ls -l allure-report  # Optional: List files in allure-report for verification
-
       - name: Deploy to GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # GitHub token with repo scope
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Clone the gh-pages branch where GitHub Pages site is hosted
-          git clone --branch gh-pages https://github.com/SohamQAKrish/Bateel_Automation.git gh-pages
-          
-          # Clean the existing contents of the gh-pages branch
-          cd gh-pages
-          git rm -rf .
-
-          # Copy the Allure report files into the gh-pages branch
-          cp -r ../allure-report/* .
-
-          # Configure Git user details
-          git config --global user.email "kashyap.dave@krishtechnolabs.com"
-          git config --global user.name "KashyapDave95"
-
-          # Add, commit, and push the changes to gh-pages branch
+          cd allure-report
+          git init
+          git config user.email "soham.pandit@krishtechnolabs.com"
+          git config user.name "SohamQAKrish"
+          git checkout -b gh-pages  # Create or switch to gh-pages branch
           git add .
-          git commit -m "Deploy Allure report and GitHub Pages"
-          git push origin gh-pages
+          git commit -m "Update Allure report"
+          git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/SohamQAKrish/Bateel_Automation.git
+          git push -f -u origin gh-pages  # Force push to gh-pages branch
