--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <browser>chrome</browser>
     <defaultTimeout>30</defaultTimeout>
     </properties>
+    <!--Mentioned name and url-->
 
     <name>Bateel QA Automation</name>
     <url>http://www.example.com</url>
@@ -31,6 +32,7 @@
         </developer>
         
     </developers>
+    <!--Below all are required dependencies-->
 
     <dependencies>
         <dependency>
@@ -146,41 +148,47 @@
 		</dependency>
     </dependencies>
 
-	 <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.2.5</version>
-            <configuration>
-                <!-- Use properties for suiteXmlFile -->
-                <suiteXmlFiles>
-                    <suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
-                </suiteXmlFiles>
-                <!-- Add other configurations as needed -->
-                <argLine>
-                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                </argLine>
-                <systemPropertyVariables>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <propertyName>${environment}</propertyName>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <propertyName>${browser}</propertyName>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <propertyName>${defaultTimeout}</propertyName>
-                </systemPropertyVariables>
-                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            </configuration>
-        </plugin>
-        <!-- Add Allure plugin -->
-        <plugin>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version>2.12.0</version>
-            <configuration>
-                <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
-            </configuration>
-        </plugin>
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <systemPropertyVariables>
+                        <propertyName>${environment}</propertyName>
+                        <propertyName>${browser}</propertyName>
+                        <propertyName>${defaultTimeout}</propertyName>
+                    </systemPropertyVariables>
+                    <reportsDirectory>${project.basedir}/surefire-reports</reportsDirectory>
+                </configuration>
+            </plugin>
+
+            <!-- Allure Maven Plugin Configuration -->
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.10.0</version>
+                <configuration>
+                    <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
