--- a/.github/workflows/updated.yml
+++ b/.github/workflows/updated.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Deploy Allure report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_PAT }}
           publish_dir: /allure-results
       - name: Get GitHub Pages URL
         id: pages_url
