--- a/.github/workflows/mavenshm.yml
+++ b/.github/workflows/mavenshm.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: Generate Allure Report
         run: mvn allure:report
+        continue-on-error: true
 
       - name: Verify Environment Properties File
         run: ls -l allure-results/environment.properties
