--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -8,6 +8,15 @@ on:
     branches:
       - IAT-4
   workflow_dispatch:
+    inputs:
+      suite:
+        description: 'Specify which test suite to run'
+        required: true
+        default: 'LocalTestSuite.xml'
+        type: choice
+        options:
+          - LocalTestSuite.xml
+          - SanityTestSuite.xml
 
 jobs:
   build:
