--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -51,7 +51,7 @@ jobs:
         run: java -version
 
       - name: Run Tests
-        run: mvn clean test -DskipTests
+        run: mvn clean test
 
   allure-report:
     runs-on: windows-latest
