--- a/.github/workflows/dockerAllure.yml
+++ b/.github/workflows/dockerAllure.yml
@@ -37,15 +37,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Verify Java version
-        run: java -version
-
       - name: Run Tests
         run: mvn clean test
         continue-on-error: true
@@ -62,15 +53,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Verify Java version
-        run: java -version
 
       - name: Generate Allure Report
         run: mvn allure:report
@@ -92,9 +74,6 @@ jobs:
     needs: allure-report
     if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       - name: Install Allure CLI
         run: npm install -g allure-commandline
 
@@ -105,11 +84,12 @@ jobs:
 
       - name: Zip Allure Results
         run: |
-            Compress-Archive -Path allure-report\* -DestinationPath allure-results.zip  # Zip the generated HTML report
-  
+            Compress-Archive -Path allure-report\* -DestinationPath allure-results.zip
+
       - name: Upload Allure Results to Server
         run: |
-            curl -u soham:soham@#$1036 -X POST -F "file=@allure-results.zip" https://bateel-automation-demo.magentoprojects.net/upload
+            response=$(curl -u soham:soham@#$1036 -X POST -F "file=@allure-results.zip" https://bateel-automation-demo.magentoprojects.net/upload)
+            echo "Upload Response: $response"
 
       - name: Deploy to GitHub Pages
         env:
