--- a/.github/workflows/dockerAllure.yml
+++ b/.github/workflows/dockerAllure.yml
@@ -88,8 +88,7 @@ jobs:
 
       - name: Upload Allure Results to Server
         run: |
-            response=$(curl -u soham:soham@#$1036 -X POST -F "file=@allure-results.zip" https://bateel-automation-demo.magentoprojects.net/upload)
-            echo "Upload Response: $response"
+          $response = curl -u "${{ secrets.USERNAME }}:${{ secrets.PASSWORD }}" -X POST -F "file=@allure-results.zip" "https://bateel-automation-demo.magentoprojects.net/upload"
 
       - name: Deploy to GitHub Pages
         env:
