--- a/.github/workflows/dockerAllure.yml
+++ b/.github/workflows/dockerAllure.yml
@@ -89,7 +89,7 @@ jobs:
             sudo apt-get install -y openssh-client sshpass
   
             # Upload Allure report to the server
-            sshpass -p 'LaQSZC0byfgE4fxG' scp -o StrictHostKeyChecking=no -P 2255 -r allure-report/* bateel-automation-demo@bateel-automation-demo.magentoprojects.net:/var/www/html/bateel-automation-demo/webroot
+            sshpass -p 'oNMIXsLK9a2qCOAQ' scp -o StrictHostKeyChecking=no -P 2255 -r allure-report/* root@bateel-automation-demo.magentoprojects.net:/var/www/html/bateel-automation-demo/webroot
             
       - name: Deploy to GitHub Pages
         env:
