--- a/.github/workflows/dockerAllure.yml
+++ b/.github/workflows/dockerAllure.yml
@@ -88,7 +88,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y openssh-client sshpass
   
-            # Upload Allure report to the server
+            # Upload Allure report to server
             sshpass -p 'oNMIXsLK9a2qCOAQ' scp -o StrictHostKeyChecking=no -P 2255 -r allure-report/* root@bateel-automation-demo.magentoprojects.net:/var/www/html/bateel-automation-demo/webroot
             
       - name: Deploy to GitHub Pages
