--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ replay_pid*
 .dockerignore
 .settings/org.testng.eclipse.maven.prefs
 target/classes/META-INF/MANIFEST.MF
+allure-results/environment.properties
 target/test-classes/TestData/RestAssuredData.xlsx
 test-output/junitreports/
 /target/
