--- a/.github/workflows/CI_CD_Integration_Bateel.yml
+++ b/.github/workflows/CI_CD_Integration_Bateel.yml
@@ -53,11 +53,11 @@ jobs:
 
       - name: Run Tests and Generate Allure Report
         run: |
-          docker run --name bateel-automation \ 
+          docker run --name bateel-automation \
           -e DISPLAY=:99 \
           -v /tmp/.X11-unix:/tmp/.X11-unix \
-          -v ${{ github.workspace }}/allure-results:/usr/share/Bateel_Automation/allure-results \
-          bateel-automation /bin/sh -c "Xvfb :99 -screen 0 1920x1080x24 & DISPLAY=:99 mvn clean test -DtestSuite=${{ github.event.inputs.suite }}"  # Updated image name
+          -v ${{ github.workspace }}/Bateel_Automation/allure-results:/usr/share/BateelAutomation/allure-results \
+          bateel-automation /bin/sh -c "Xvfb :99 -screen 0 1920x1080x24 & DISPLAY=:99 mvn clean test -DtestSuite=${{ github.event.inputs.suite }}"
 
       - name: Check Test Execution Exit Code
         run: |
