--- a/.github/workflows/CI_CD_Integration_Bateel.yml
+++ b/.github/workflows/CI_CD_Integration_Bateel.yml
@@ -57,7 +57,7 @@ jobs:
           -e DISPLAY=:99 \
           -v /tmp/.X11-unix:/tmp/.X11-unix \
           -v ${{ github.workspace }}/Bateel_Automation/allure-results:/usr/share/BateelAutomation/allure-results \
-          bateel-automation /bin/sh -c "Xvfb :99 -screen 0 1920x1080x24 & DISPLAY=:99 mvn clean test -DtestSuite=${{ github.event.inputs.suite }}"
+          bateel-automation /bin/sh -c "Xvfb :99 -screen 0 1920x1080x24 & DISPLAY=:99 mvn clean test -DtestSuite=${{ github.event.inputs.suite }} || true"
 
       - name: Check Test Execution Exit Code
         run: |
