--- a/pom.xml
+++ b/pom.xml
@@ -146,26 +146,27 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <argLine>
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
-                    <systemPropertyVariables>
-                        <environment>${environment}</environment>
-                        <browser>${browser}</browser>
-                        <defaultTimeout>${defaultTimeout}</defaultTimeout>
-                    </systemPropertyVariables>
-                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                </configuration>
-            </plugin>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
+                </suiteXmlFiles>
+                <argLine>
+                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                </argLine>
+                <systemPropertyVariables>
+                    <environment>${environment}</environment>
+                    <browser>${browser}</browser>
+                    <defaultTimeout>${defaultTimeout}</defaultTimeout>
+                </systemPropertyVariables>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                <testFailureIgnore>true</testFailureIgnore>
+            </configuration>
+        </plugin>
 
             <!-- Allure Maven Plugin Configuration -->
             <plugin>
