Run local sanity suite and updated YML
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/.github/workflows/CI_CD_Integration_Bateel.yml
+++ b/.github/workflows/CI_CD_Integration_Bateel.yml
@@ -94,11 +94,11 @@ jobs:
         env:
           USERNAME: bateel-automation-demo
           PASSWORD: ${{ secrets.SSH_PASSWORD }}
-          SERVER: bateel-automation-demo.magentoprojects.net
+          SERVER: bateel-sanity-demo.magentoprojects.net
           PORT: 2255
         run: |
-          sshpass -p "$PASSWORD" scp -P "$PORT" -o StrictHostKeyChecking=no -r ./allure-report/* "$USERNAME@$SERVER:/var/www/html/bateel-automation-demo/webroot" || { echo "Failed to upload files"; exit 1; }
+          sshpass -p "$PASSWORD" scp -P "$PORT" -o StrictHostKeyChecking=no -r ./allure-report/* "$USERNAME@$SERVER:/var/www/html/bateel-automation-demo/sanity/webroot" || { echo "Failed to upload files"; exit 1; }
 
       - name: Display Report Link
         run: |
-          echo "Allure Report can be accessed at: https://bateel-automation-demo.magentoprojects.net/"
+          echo "Allure Report can be accessed at: https://bateel-sanity-demo.magentoprojects.net/"
