--- a/.github/workflows/CI_CD_Integration_LocalSuite.yml
+++ b/.github/workflows/CI_CD_Integration_LocalSuite.yml
@@ -46,7 +46,7 @@ jobs:
           -e DISPLAY=:99 \
           -v /tmp/.X11-unix:/tmp/.X11-unix \
           -v ${{ github.workspace }}/allure-results:/usr/share/BateelAutomation/allure-results \
-          bateel-automation /bin/sh -c "Xvfb :99 -screen 0 1920x1080x24 & DISPLAY=:99 mvn clean test -DtestSuite=LocalSuite || true"
+          bateel-automation /bin/sh -c "Xvfb :99 -screen 0 1920x1080x24 & DISPLAY=:99 mvn clean test -DtestSuite=LocalTestSuite.xml || true"
 
       - name: Check Test Execution Exit Code
         run: |
